# jira-tracker

./: index.html  package-lock.json  package.json  setup.sh  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1775129150875-e4d317e00323b.mjs
.github/workflows/: release.yml
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: jira.rs
src/components/: AlertPanel.tsx  BoardPicker.tsx  BoardSetup.tsx  ColumnConfigPanel.tsx  ColumnPanel.tsx  DraftFormPanel.tsx  DraftsPanel.tsx  HistoryPanel.tsx  Insights.tsx  IssueCard.tsx  IssueDetail.tsx  IssueDetailPanel.tsx  IssueList.tsx  MonitorSetup.tsx  MonitorView.tsx  SearchIssue.tsx  Settings.tsx  Sidebar.tsx
src/hooks/: useBoardView.ts  useInactivityTimer.ts  useIssues.ts  useMonitor.ts  useMousePassthrough.ts  useScreenReposition.ts  useTheme.ts  useWindowBounds.ts  useWindowResize.ts
src/services/: alertEngine.ts  crypto.ts  db.ts  jira.ts  notifications.ts
src/types/: index.ts
