[package]
name = "jira-tracker"
version = "0.1.0"
description = "Jira Issue Tracker - macOS Widget"
authors = []
edition = "2021"

[lib]
name = "jira_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }

tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[profile.release]
opt-level = "s"
strip = true
